packaged jvm and rebindable controls (#24)
* bundled runtime

* camera scaling fixes

* modern-ish line rendering

* paint tab update

* improve triangle cutting

* fix crashes

* fix bounding box rendering

* change copy to mod on empty

* rebindable controls

* formatter

* modest sprite error handling

* sprite shading

* changelog